--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Commit files
         if: env.update-badge == 'true'
         run: |
-         git config --local user.email "private@blowsie.com"
-         git config --local user.name "blowsie"
+         git config --local user.email "github-actions[bot]@users.noreply.github.com"
+         git config --local user.name "github-actions[bot]"
          git add stackoverflow-badge.svg
          git commit -m "🤖 Update Badge" -a
       - name: Push changes
